TextView show random number

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">JOC</string>
+    <string name="dialog_message">CONGRATULATIONS YOU WIN !!!</string>
 </resources>
